feat: overhaul CSS/Less language colouring 🎨
My goal was to bring the colours on par with HTML and other, regular programming languages. So, HTML classes are now the same colour as ie. JavaScript classes etc. It's a bit less colourful now, I guess, but hopefully it will help you with navigating the files by instantly recognising most of the associated colours.

--- a/samples/css.css
+++ b/samples/css.css
@@ -142,3 +142,11 @@
 .CodeMirror-merge-collapsed-line .CodeMirror-gutter-elt {
   display: none
 }
+
+div {
+  content: "..."
+}
+
+#id {
+  content: "..."
+}
